# ml-playground

./: .gitignore  AGENTS.md  gpu_test.py  pyproject.toml
agent/: pyproject.toml
agent/coding_agent/: config.py
agent/docs/plans/: 2026-04-25-local-llm-coding-agent.md
agent/docs/specs/: 2026-04-25-local-llm-coding-agent-design.md
agent/tests/: test_config.py
fine-tuning/: test.ipynb
fine-tuning/llm-course/: Lab_2_fine_tune_generative_ai_model.ipynb
fine-tuning/llm-course/peft-dialogue-summary-training-1776143336/checkpoint-220/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
llm-course/: Lab_2_fine_tune_generative_ai_model.ipynb
llm-fine-tuning/: .envrc  main.py  pyproject.toml
local-llm/: main.py  pyproject.toml
serving/: run.sh
