[project]
name = "llm-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.0.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=0.36.2",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "rouge-score>=0.1.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.57.6",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]

