[project]
name = "coding-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "smolagents>=1.13.0",
    "openai>=1.0.0",
    "duckduckgo-search>=7.0.0",
    "rich>=13.0.0",
]

[project.scripts]
agent = "coding_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
